# staff

./: .gitignore  BUILD  Cargo.toml  MODULE.bazel  WORKSPACE.bzlmod  build.rs  make-protos.sh  readme.md
protos/: staff.proto
src/: main.rs  staff.rs
