[package]
name = "staff"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.5", features = ["default", "macros"]}
bytes = "=1.7.1"
chrono = {version = "0.4.38", features = ["alloc", "std", "clock", "now"]}
clap = { version = "4.5.14", features = ["derive"] }
lazy_static = "1.5.0"
prost = "0.13"
prost-types = "0.13"
rand = "0.8.5"
tokio = { version = "1", features = ["rt-multi-thread"]}
ureq = { version = "2.10.1", features = ["json"] }

[build-dependencies]
prost-build = { version = "0.13.1" }
